[package]
name = "pdump"
version = "0.1.0"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Cross-platform packet capture tool"
repository = "https://github.com/shellrow/pdump"
readme = "README.md"
keywords = ["network","security","packet","cli"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
default-net = "0.2.0"
clap = "2.33"
crossterm = "0.19"
sudo = "0.6"
chrono = "0.4"

[target.'cfg(not(windows))'.dependencies]
pnet = "0.27"

[target.'cfg(target_os = "windows")'.dependencies]
pnet = "0.26"