[package]
name = "pdump"
version = "0.1.0"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Cross-platform packet capture tool"
repository = "https://github.com/shellrow/pdump"
readme = "README.md"
keywords = ["network","security","packet","cli"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
default-net = "0.3.0"
clap = "2.33"
chrono = "0.4"
pnet = "0.28"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "std" ] }