[package]
name = "pdump"
version = "0.2.1"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2021"
description = "Cross-platform packet capture tool"
repository = "https://github.com/shellrow/pdump"
readme = "README.md"
keywords = ["network","security","packet","cli"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
default-net = "0.16"
clap = { version = "3.1", features = ["cargo"] }
chrono = "0.4"
pnet = "0.33.0"
